--- a/index.html
+++ b/index.html
@@ -12,19 +12,248 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-gradient-to-r from-main to-secondary">
-    <main class="w-full px-5 py-5">
-      <div class="w-full mb-5 text-center">
-        <h2 class="font-bold text-5xl">Rafi & Aliilah</h2>
-        <p class="font-medium text-xl">Weddings</p>
-      </div>
-      <div class="w-full flex justify-center items-center">
-        <img
-          src="https://images.unsplash.com/photo-1583939003579-730e3918a45a?auto=format&fit=crop&q=80&w=1887&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="Image of Aliilah and Rafi"
-          class="w-full md:w-1/3 rounded-t-full p-2 border-2 border-secondary"
-        />
+  <body class="bg-white">
+    <nav
+      class="w-full flex items-center justify-center bg-white py-5 fixed top-0"
+    >
+      <a href="/" class="font-bold">R & A</a>
+    </nav>
+    <main class="w-full px-5 py-24 bg-white">
+      <div class="max-w-sm w-full mx-auto flex flex-col justify-center">
+        <div class="block mb-20">
+          <img
+            src="https://images.unsplash.com/photo-1622503958522-9f847e7e18de?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Photo of Maulana and Kalyca"
+            class="max-w-sm w-full mb-4"
+          />
+          <div class="block mb-7">
+            <div class="block mb-4">
+              <h1 class="text-center font-bold text-xl">THE FIRST MEET</h1>
+              <p class="text-center font-bold text-base text-tertiary">2023</p>
+              <img
+                src="/assets/bunga.png"
+                alt="Flower decoration"
+                class="w-40 mx-auto"
+              />
+            </div>
+            <p class="text-center">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit eius assumenda distinctio, nesciunt eaque vitae
+              ullam vero similique fugit. Labore dolorum eius, ullam ut deserunt
+              cumque doloribus nostrum itaque assumenda illo repudiandae nobis,
+              hic veritatis placeat necessitatibus excepturi dicta saepe
+              distinctio blanditiis dignissimos ab vero? Perferendis, ipsum
+              veritatis? Ipsum, expedita!
+            </p>
+          </div>
+          <div class="flex flex-col justify-center items-center gap-5">
+            <div class="w-full text-right">
+              <img
+                src="https://images.unsplash.com/photo-1657206117788-9e506bcafbef?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Rafi Maulana"
+                class="w-full h-48 object-cover mb-3"
+              />
+              <div class="block">
+                <h1 class="font-bold text-xl text-tertiary">Rafi Maulana</h1>
+                <h4 class="text-sm text-tertiary mb-3">
+                  Putra dari Elon Musk & Mark Zuckerberg
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+                  repudiandae dignissimos sit illo corporis eligendi illum
+                  consectetur quidem in aut. Maiores, quidem! Nobis quaerat
+                  rerum aspernatur, ratione amet ut esse.
+                </p>
+              </div>
+            </div>
+            <div class="w-full text-left">
+              <img
+                src="https://images.unsplash.com/photo-1657206117788-9e506bcafbef?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Rafi Maulana"
+                class="w-full h-48 object-cover mb-3"
+              />
+              <div class="block">
+                <h1 class="font-bold text-xl text-tertiary">Aliilah Kalyca</h1>
+                <h4 class="text-sm text-tertiary mb-3">
+                  Putra dari Elon Musk & Mark Zuckerberg
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+                  repudiandae dignissimos sit illo corporis eligendi illum
+                  consectetur quidem in aut. Maiores, quidem! Nobis quaerat
+                  rerum aspernatur, ratione amet ut esse.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block mb-20">
+          <div class="block">
+            <div class="block mb-4">
+              <h1 class="text-center font-bold text-xl">THE WEDDING</h1>
+              <p class="text-center font-bold text-base text-tertiary mb-5">
+                Upacara dan Resepsi
+              </p>
+              <div class="flex gap-5 justify-center">
+                <svg
+                  version="1.1"
+                  id="iconeventreception"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  width="50px"
+                  height="60px"
+                  viewBox="0 0 50 60"
+                  style="enable-background: new 0 0 50 60"
+                  xml:space="preserve"
+                >
+                  <g id="fill">
+                    <circle
+                      class="st0"
+                      cx="38.246"
+                      cy="26.093"
+                      r="1.284"
+                    ></circle>
+                    <circle
+                      class="st0"
+                      cx="35.938"
+                      cy="29.681"
+                      r="1.285"
+                    ></circle>
+                    <circle
+                      class="st0"
+                      cx="31.837"
+                      cy="25.068"
+                      r="1.285"
+                    ></circle>
+                    <circle
+                      class="st0"
+                      cx="18.601"
+                      cy="13.906"
+                      r="1.284"
+                    ></circle>
+                    <circle
+                      class="st0"
+                      cx="15.158"
+                      cy="16.425"
+                      r="1.285"
+                    ></circle>
+                    <circle
+                      class="st0"
+                      cx="12.99"
+                      cy="10.645"
+                      r="1.285"
+                    ></circle>
+                    <path
+                      class="st0"
+                      d="M47.693,16.079c0.137-0.33,0.087-0.708-0.13-0.992c-0.218-0.283-0.572-0.426-0.924-0.383l-24.379,3.2
+                             c-0.354,0.047-0.656,0.279-0.793,0.608c-0.137,0.33-0.087,0.708,0.13,0.992l14.796,19.3l1.781,13.592l-4.087,5.251
+                             c-0.249,0.32-0.28,0.759-0.079,1.111c0.18,0.313,0.513,0.503,0.868,0.503c0.043,0,0.087-0.003,0.13-0.009l9.982-1.311
+                             c0.402-0.053,0.733-0.343,0.837-0.735s-0.04-0.809-0.363-1.053l-5.306-4.018l-1.781-13.592L47.693,16.079z M26.653,22.812
+                             c4.007-0.823,5.581-0.489,8.235,0.483c1.199,0.438,2.438,0.723,4.108,0.723c0.954,0,2.062-0.101,3.367-0.311L37.09,36.425
+                             L26.653,22.812z M45.183,16.913l-1.906,4.596c-3.979,0.788-5.929,0.555-7.7-0.092c-3.18-1.163-5.077-1.534-10.268-0.359
+                             l-1.07-1.396L45.183,16.913z M37.163,56.953l2.24-2.879l2.909,2.203L37.163,56.953z"
+                    ></path>
+                    <path
+                      class="st0"
+                      d="M11.021,38.895l3.224-13.323L31.017,7.959c0.246-0.259,0.336-0.629,0.234-0.972
+                             c-0.101-0.343-0.377-0.606-0.724-0.69L6.63,0.517C6.281,0.434,5.917,0.541,5.671,0.8C5.424,1.058,5.335,1.429,5.436,1.771
+                             l6.865,23.33L9.076,38.426l-5.701,3.431c-0.348,0.209-0.534,0.607-0.473,1.008c0.062,0.401,0.359,0.726,0.753,0.82l9.786,2.365
+                             c0.078,0.02,0.157,0.028,0.235,0.028c0.008,0,0.014-0.001,0.02,0c0.552,0,1-0.447,1-1c0-0.26-0.099-0.496-0.261-0.674
+                             L11.021,38.895z M13.806,23.132L8.964,6.676c4.034,0.673,5.383,1.551,7.511,3.412c1.511,1.32,3.256,2.324,6.823,3.077
+                             L13.806,23.132z M28.373,7.835l-3.435,3.607c-4.004-0.696-5.725-1.616-7.147-2.86c-2.547-2.228-4.186-3.257-9.451-4.026
+                             L7.843,2.869L28.373,7.835z M6.495,42.313l3.125-1.882l1.923,3.102L6.495,42.313z"
+                    ></path>
+                  </g>
+                </svg>
+                <svg
+                  version="1.1"
+                  id="iconeventceremony"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  width="50px"
+                  height="60px"
+                  viewBox="0 0 50 60"
+                  style="enable-background: new 0 0 50 60"
+                  xml:space="preserve"
+                >
+                  <path
+                    class="st0"
+                    d="M46.202,29.344c0.777-0.53,1.395-1.149,1.711-1.827c0.588-1.261,0.49-3.104-0.26-4.929
+                         c-0.776-1.888-2.093-3.376-3.613-4.084c-0.812-0.378-1.739-0.57-2.756-0.57c-2.832,0-5.746,1.494-6.634,3.399
+                         c-0.304,0.65-0.398,1.513-0.305,2.483c-3.428,0.014-6.703,1.185-9.346,3.218c-2.646-2.034-5.923-3.206-9.346-3.219
+                         c0.094-0.97-0.001-1.832-0.305-2.482c-0.888-1.906-3.802-3.4-6.633-3.4c-1.017,0-1.945,0.192-2.756,0.57
+                         c-1.52,0.708-2.836,2.196-3.612,4.084c-0.75,1.826-0.848,3.668-0.26,4.93c0.316,0.677,0.933,1.296,1.71,1.825
+                         C0.019,33.88-0.861,40.302,1.664,45.716c2.609,5.594,8.174,8.886,13.975,8.886c2.175,0,4.384-0.463,6.481-1.441
+                         c1.037-0.483,1.996-1.081,2.882-1.761c0.877,0.676,1.833,1.273,2.878,1.761c2.099,0.979,4.307,1.441,6.482,1.441
+                         c5.8,0,11.365-3.292,13.974-8.886C50.86,40.303,49.981,33.881,46.202,29.344z M41.826,25.617c0.87,0.29,1.769,0.438,2.67,0.438
+                         c0.595,0,1.189-0.071,1.778-0.198c-0.021,0.308-0.07,0.592-0.174,0.814c-0.562,1.202-3.462,2.474-5.642,2.474
+                         c-0.098,0-0.176-0.016-0.267-0.021L41.826,25.617z M43.196,20.316c1.054,0.491,2.028,1.625,2.607,3.032
+                         c0.072,0.176,0.117,0.35,0.175,0.526c-1.419,0.333-2.896,0.19-4.242-0.439c-1.348-0.627-2.408-1.667-3.063-2.97
+                         c0.779-0.318,1.68-0.532,2.61-0.532C42.007,19.934,42.65,20.063,43.196,20.316z M36.463,22.178c0.102-0.218,0.285-0.439,0.509-0.656
+                         c0.707,1.338,1.746,2.454,3.043,3.249l-1.639,3.515c-0.55-0.59-1.093-1.474-1.487-2.475C36.218,24.108,36.191,22.76,36.463,22.178z
+                          M25.004,48.747c-3.922-3.866-5.213-9.927-2.756-15.197c0.687-1.472,1.63-2.771,2.752-3.87c1.122,1.099,2.065,2.398,2.751,3.87
+                         c1.512,3.242,1.671,6.88,0.447,10.241C27.507,45.694,26.407,47.368,25.004,48.747z M13.111,25.811
+                         c-0.395,1.001-0.937,1.885-1.487,2.475l-1.638-3.515c1.296-0.795,2.335-1.911,3.042-3.248c0.224,0.217,0.408,0.438,0.509,0.657
+                         C13.808,22.76,13.782,24.108,13.111,25.811z M3.899,26.672c-0.104-0.223-0.152-0.506-0.174-0.815
+                         c0.588,0.127,1.183,0.198,1.778,0.198c0.902,0,1.801-0.148,2.67-0.438l1.634,3.507c-0.091,0.005-0.169,0.021-0.267,0.021
+                         C7.361,29.145,4.461,27.874,3.899,26.672z M6.804,20.316c0.545-0.254,1.188-0.383,1.912-0.383c0.93,0,1.831,0.213,2.609,0.532
+                         c-0.654,1.302-1.714,2.342-3.063,2.97c-1.345,0.629-2.822,0.772-4.24,0.439c0.057-0.176,0.102-0.35,0.174-0.526
+                         C4.775,21.941,5.75,20.808,6.804,20.316z M21.274,51.348c-6.693,3.123-14.677,0.215-17.798-6.478
+                         c-2.257-4.84-1.382-10.603,2.139-14.564c1.29,0.528,2.712,0.838,3.926,0.838c0.827,0,1.541-0.137,2.121-0.408
+                         c1.271-0.592,2.508-2.16,3.309-4.192c0.095-0.241,0.179-0.48,0.255-0.717c2.994-0.082,5.884,0.853,8.24,2.559
+                         c-1.23,1.237-2.269,2.685-3.031,4.318c-2.798,6.003-1.366,12.896,3.045,17.345C22.795,50.545,22.059,50.982,21.274,51.348z
+                          M46.523,44.87c-3.121,6.692-11.105,9.595-17.798,6.478c-0.787-0.367-1.517-0.807-2.196-1.298c1.554-1.563,2.774-3.444,3.55-5.575
+                         c1.406-3.863,1.223-8.043-0.515-11.771c-0.762-1.634-1.8-3.081-3.031-4.317c2.357-1.706,5.248-2.641,8.24-2.56
+                         c0.076,0.237,0.16,0.476,0.255,0.717c0.801,2.033,2.038,3.6,3.309,4.192c0.581,0.271,1.295,0.408,2.122,0.408
+                         c1.214,0,2.636-0.311,3.926-0.838C47.905,34.268,48.781,40.03,46.523,44.87z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+            <p class="text-center mb-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+              deleniti rerum quos maxime suscipit ipsa dolores? Dicta beatae
+              nesciunt omnis, est assumenda itaque ab fuga doloremque voluptates
+              eum qui veniam?
+            </p>
+            <div class="w-full mx-auto">
+              <div class="text-center mb-3">
+                <h3 class="font-extrabold text-xl">Waktu</h3>
+                <p>
+                  Kamis, 9 November 2023 <br />
+                  10:00 - 12:00
+                </p>
+              </div>
+              <div class="text-center">
+                <h3 class="font-extrabold text-xl">Tempat</h3>
+                <p>
+                  Jl. Katedral No.7B, Ps. Baru, Sawah Besar, Kota Jakarta Pusat,
+                  Daerah Khusus Ibukota Jakarta 10710
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block">
+          <h2 class="font-bold text-center text-lg mb-5">
+            Tiada yang dapat kami ungkapkan selain rasa terima kasih dari hati
+            yang tulus apabila Anda berkenan hadir untuk memberikan do’a restu
+            kepada kami.
+          </h2>
+          <h1 class="text-center font-bold text-xl text-tertiary">
+            Rafi & Aliilah
+          </h1>
+        </div>
       </div>
     </main>
+    <footer class="bg-gradient-to-r from-main to-secondary py-5">
+      <p class="text-center font-bold text-sm">
+        Made with ❤️ by Sotel
+      </p>
+    </footer>
   </body>
 </html>
